crates/ruff_linter/src/rules/flake8_bugbear/snapshots/ruff_linter__rules__flake8_bugbear__tests__B002_B002.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bugbear/mod.rs
---
B002 Python does not support the unary prefix increment operator (`++`)
  --> B002.py:18:9
   |
18 |     x = ++n
   |         ^^^
   |

B002 Python does not support the unary prefix decrement operator (`--`)
  --> B002.py:19:9
   |
19 |     y = --n
   |         ^^^
   |

B002 Python does not support the unary prefix increment operator (`++`)
  --> B002.py:24:12
   |
24 |     return ++n, --n
   |            ^^^
   |

B002 Python does not support the unary prefix decrement operator (`--`)
  --> B002.py:24:17
   |
24 |     return ++n, --n
   |                 ^^^
   |
