crates/ruff_linter/src/rules/flake8_bugbear/snapshots/ruff_linter__rules__flake8_bugbear__tests__B003_B003.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bugbear/mod.rs
---
B003 Assigning to `os.environ` doesn't clear the environment
 --> B003.py:9:1
  |
9 | os.environ = {}
  | ^^^^^^^^^^
  |
