crates/ruff_linter/src/rules/flake8_bugbear/snapshots/ruff_linter__rules__flake8_bugbear__tests__B006_B006_1.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bugbear/mod.rs
---
B006 [*] Do not use mutable data structures for argument defaults
 --> B006_1.py:3:22
  |
1 | # Docstring followed by a newline
2 |
3 | def foobar(foor, bar={}):    
  |                      ^^
4 |     """
5 |     """
  |
help: Replace with `None`; initialize within function
  |
2 |
  - def foobar(foor, bar={}):    
3 + def foobar(foor, bar=None):    
4 |     """
  |
note: This is an unsafe fix and may change runtime behavior
