crates/ruff_linter/src/rules/flake8_bugbear/snapshots/ruff_linter__rules__flake8_bugbear__tests__B006_B006_4.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bugbear/mod.rs
---
B006 [*] Do not use mutable data structures for argument defaults
 --> B006_4.py:7:26
  |
6 | class FormFeedIndent:
7 |    def __init__(self, a=[]):
  |                         ^^
8 |         print(a)
  |
help: Replace with `None`; initialize within function
4  |
5  |
6  | class FormFeedIndent:
   -    def __init__(self, a=[]):
7  +    def __init__(self, a=None):
8  +         if a is None:
9  +          a = []
10 |         print(a)
11 |
note: This is an unsafe fix and may change runtime behavior
