crates/ruff_linter/src/rules/flake8_bugbear/snapshots/ruff_linter__rules__flake8_bugbear__tests__B006_B006_9.py.snap
---
source: crates/ruff_linter/src/rules/flake8_bugbear/mod.rs
---
B006 [*] Do not use mutable data structures for argument defaults
  --> B006_9.py:17:11
   |
17 | def f5(x=([1, ])):
   |           ^^^^^
18 |     print(x)
   |
help: Replace with `None`; initialize within function
   |
17 ~ def f5(x=None):
18 +     if x is None:
19 +         x = [1]
   |
note: This is an unsafe fix and may change runtime behavior
